# tauri_bug_repro

./: Cargo.toml  Tauri.toml
src/: main.rs
www/: index.html
