[package]
name = "tauri_repro"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.1", features = ["config-toml"] }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tauri = { version = "1.1", features = ["api-all", "config-toml"] }
# polars = { version = "0.20.0", features = ["rows", "ipc", "serde"] }
# tokio = { version = "*", features = ["full"] }
# tracing = { version =  "0.1.36", features = [ "release_max_level_warn" ] }
# tracing-subscriber = "0.3.15"
# tracing-wasm = "0.2.1" # TODO: do we need this / tracing deps / some serde deps? Do dep review.
# serde = { version = "1.0", features = ["derive"] }
# serde_json = { version = "1.0.59", features = ["raw_value"] }
